tests/core/snapshots/graphql-conformance-http-013.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server(hostname: "0.0.0.0", port: 8001, queryValidation: false) @upstream(httpCache: 42) {
  query: Query
}

type Query {
  me: User! @http(url: "http://upstream/me")
}

type User {
  birthday: Date
  id: String
  name: String
}
