tests/core/snapshots/graphql-conformance-http-014.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "id": 1,
        "name": "Admin"
      }
    }
  }
}
