tests/core/snapshots/graphql-conformance-http-015.md_10.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "Build error: ResolveInputError: Argument `size` for field `profilePic` is required",
        "locations": [
          {
            "line": 0,
            "column": 0
          }
        ]
      }
    ]
  }
}
